# neural-search

./: README.md  pyproject.toml  start_server.sh
data/pipelines/KeywordSearch/: pipeline.json
data/pipelines/keyword_search/: index_parameters.json  pipeline.json
interface/: components.py  config.py  convert_data.py  demo.py  index_functions.py  pages.py  utils.py
interface/data/: demo_config.json  passages_coronavirus_metadata.csv
interface/data/pipelines/DensePassageRetrieval/: index_parameters.json  pipeline.json  search_parameters.json
interface/data/pipelines/KeywordSearch/: index_parameters.json  pipeline.json  search_parameters.json
interface/data/pipelines/QueryClassifier/: index_parameters.json  pipeline.json  search_parameters.json
interface/data/pipelines/QueryClassifierRanker/: pipeline.json  search_parameters.json
neural_search/api/: models.py  server.py  utils.py
neural_search/core/: search.py  utils.py
neural_search/core/pipeline_generation/: generator.py  pipelines.py
neural_search/tools/: generate_pipeline.py  search_utils.py
neural_search/utils/: search_utils.py
