[tool.poetry]
name = "neural-search"
version = "0.1.0"
description = ""
authors = ["ugmSorcero <unai@sorcero.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
farm-haystack = "^1.8.0"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
streamlit = {version = "^1.12.2", optional = true}
st-annotated-text = {version = "^3.0.0", optional = true}
streamlit-option-menu = {version = "^0.3.2", optional = true}
streamlit-tags = {version = "^1.2.8", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[tool.poetry.extras]
interface = ["streamlit","st-annotated-text","streamlit-option-menu","streamlit-tags"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
